--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "less": "^2.4.0",
     "through2": "^0.6.3"
   },
-  "repository": "https://github.com/iiegor/isostyle",
-  "license": "MIT",
   "devDependencies": {
     "browserify": "^12.0.1",
     "concat-stream": "^1.5.1",
     "jsdom": "^7.0.2",
     "tap": "^2.2.0"
-  }
+  },
+  "repository": "https://github.com/iiegor/isostyle",
+  "license": "MIT"
 }
